fixing spacing on admin controls

--- a/src/app/task-details/task-details.component.css
+++ b/src/app/task-details/task-details.component.css
@@ -17,7 +17,7 @@
 
 #details_header_adminControl {
   width: 100%;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .center_map_container {
